# visual-e2e-test

./: .gitignore  CHANGELOG.md  README.md  commitlint.config.js  package-lock.json  package.json
.cursor/rules/: changelog.mdc  commits.mdc  documentation.mdc
.github/workflows/: electron-release.yml
.husky/: commit-msg
config/: cdn.qiniu.json  settings.client.json
docs/: CLIENT.md
electron/: installer-cleanup.ts  main.ts  paths.ts  preload.ts  sidecar.ts  storage.ts  tsconfig.json  tsconfig.preload.json
electron/icons/: icon.icns
electron/ipc/: handlers.ts
electron/menu/: app-menu.ts  update-checker.ts
electron/tools/: tool-manager.ts
scripts/: paths.mjs  profile-to-scenario.mjs  pub.mjs  release.mjs  run-test.mjs  setup-rust-mirror.sh  upload-cdn.mjs
scripts/dev/: electron-dev.mjs  electron-web.mjs  env.mjs  preflight.mjs  tauri-dev.mjs  tauri-web.mjs  tools.mjs  workspace-server.mjs  workspace-web.mjs  workspace.mjs
scripts/lib/: cdn-config.mjs  changelog.mjs  qiniu-upload.mjs  release-assets.mjs  release-assets.test.mjs  version.mjs
scripts/pack/: copy-bundles.mjs  download-node.mjs  generate-icons.mjs  platform.mjs  run-electron-build.mjs  run-tauri-build.mjs  stage-app.mjs  sync-version.mjs
scripts/tools/: build-all.mjs  discover.mjs  install-all.mjs  list.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: installer_cleanup.rs  lib.rs  main.rs  sidecar.rs  storage.rs
src-tauri/windows/: hooks.nsh
src/core/: browser.ts  config.ts  paths.ts  (+2 more)
tools/: README.md  registry.json
(+145 files in other folders)
